--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>E Commerce App</title>
+  <title>Sắc</title>
   <style>
     #kommunicate-widget-iframe {
       position: fixed;
